--- a/Energy.WeatherReadings/Energy.WeatherReadings.csproj
+++ b/Energy.WeatherReadings/Energy.WeatherReadings.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
