Meter Setup State logic + using local storage

--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,21 +7,24 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
-
   <ItemGroup>
+    <PackageReference Include="Fluxor" Version="5.9.0" />
     <PackageReference Include="Fluxor.Blazor.Web" Version="5.9.0" />
+    <PackageReference Include="Fluxor.Persist" Version="2.5.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.8" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-    <PackageReference Include="MudBlazor" Version="6.5.0" />
+    <PackageReference Include="MudBlazor" Version="6.6.0" />
 	<PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
+	<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 	<PackageReference Include="TimeZoneConverter" Version="6.1.0" />
   </ItemGroup>
   
   
   <ItemGroup>
+    <ProjectReference Include="..\Energy.n3rgyApi\Energy.n3rgyApi.csproj" />
     <ProjectReference Include="..\Energy.Shared\Energy.Shared.csproj" />
     <ProjectReference Include="..\Energy.WeatherReadings\Energy.WeatherReadings.csproj" />
   </ItemGroup>
