--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Fluxor" Version="5.9.0" />
     <PackageReference Include="Fluxor.Blazor.Web" Version="5.9.0" />
     <PackageReference Include="Fluxor.Persist" Version="2.5.3" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.8" />
