--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.8" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.1.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="MudBlazor" Version="6.6.0" />
 	<PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
 	<PackageReference Include="System.Linq.Async" Version="6.0.1" />
@@ -29,6 +33,25 @@
     <ProjectReference Include="..\Energy.Shared\Energy.Shared.csproj" />
     <ProjectReference Include="..\Energy.WeatherReadings\Energy.WeatherReadings.csproj" />
   </ItemGroup>
+  
+  
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+  
+  
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\Files\chartCreation.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\Files\chartCreation.js.map" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\Files\types.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\Files\types.js.map" />
+  </ItemGroup>
+  
+  
+  
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="npm run build --prefix JS/" />
+  </Target>
 
 
 
