Web workers & chart formatting

--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -24,7 +24,6 @@
 		<PackageReference Include="MudBlazor" Version="6.7.0" />
 		<PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
 		<PackageReference Include="SpawnDev.BlazorJS.WebWorkers" Version="2.1.15" />
-		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 	</ItemGroup>
 
 
@@ -47,6 +46,9 @@
 		<_ContentIncludedByDefault Remove="wwwroot\js\Files\types.js.map" />
 	</ItemGroup>
 
+	<PropertyGroup>
+		<BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
+	</PropertyGroup>
 
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
