--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -17,10 +17,6 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.9" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.9" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.1.5">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
 		<PackageReference Include="MudBlazor" Version="6.7.0" />
 		<PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
 	</ItemGroup>
@@ -34,10 +30,7 @@
 
 
 	<ItemGroup>
-		<_ContentIncludedByDefault Remove="wwwroot\js\Files\chartCreation.js" />
-		<_ContentIncludedByDefault Remove="wwwroot\js\Files\chartCreation.js.map" />
-		<_ContentIncludedByDefault Remove="wwwroot\js\Files\types.js" />
-		<_ContentIncludedByDefault Remove="wwwroot\js\Files\types.js.map" />
+	  <Folder Include="wwwroot\js\" />
 	</ItemGroup>
 
 	<PropertyGroup>
