--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -18,7 +18,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.9" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageReference Include="MudBlazor" Version="6.7.0" />
-		<PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
+		<PackageReference Condition="'$(Configuration)'=='Debug'" Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
 	</ItemGroup>
 
 
@@ -38,8 +38,10 @@
 	</PropertyGroup>
 
 
-	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="npm run build --prefix JS/" />
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent" >
+		<Exec Condition="'$(Configuration)'=='Debug'" Command="npm run buildDev --prefix JS/" />
+		<Exec Condition="'$(Configuration)'=='Release'" Command="npm run buildProd --prefix JS/" />
+		
 	</Target>
 
 </Project>
