--- a/Energy.App.Standalone/JS/package.json
+++ b/Energy.App.Standalone/JS/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "buildDev": "webpack --config webpack.dev.config.js",
+    "buildProd": "webpack --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +16,7 @@
     "@types/node": "^20.4.1",
     "@types/webpack": "^5.28.1",
     "lodash": "^4.17.21",
-    "only-if-changed-webpack-plugin": "^0.0.3",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
