Disable trimming for json serialization support

--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -34,6 +34,8 @@
 	</ItemGroup>
 
 	<PropertyGroup>
+		<RunAOTCompilation>true</RunAOTCompilation>
+		<PublishTrimmed>false</PublishTrimmed>
 		<BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
 	</PropertyGroup>
 
