--- a/Energy.App.Standalone/JS/tsconfig.json
+++ b/Energy.App.Standalone/JS/tsconfig.json
@@ -10,7 +10,7 @@
     "allowJs": true,
     "outDir": "../wwwroot/js"
   },
-  "files": ["index.ts", "./Files/chartCreation.ts", "./Files/types.ts"],
+  "files": ["index.ts", "./Files/chartCreation.ts", "./Files/types.ts", "./Files/energyOnlyChart.ts", "./Files/weatherIconChart.ts"],
   
   "exclude": [
     "node_modules",
