--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -8,6 +8,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="JS\node_modules\**" />
+	  <Content Remove="JS\node_modules\**" />
+	  <EmbeddedResource Remove="JS\node_modules\**" />
+	  <None Remove="JS\node_modules\**" />
+	  <TypeScriptCompile Remove="JS\node_modules\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Fluxor" Version="5.9.0" />
 		<PackageReference Include="Fluxor.Blazor.Web" Version="5.9.0" />
 		<PackageReference Include="Fluxor.Persist" Version="2.5.3" />
@@ -17,6 +25,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.9" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.9" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.1.5">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="MudBlazor" Version="6.7.0" />
 		<PackageReference Condition="'$(Configuration)'=='Debug'" Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
 	</ItemGroup>
@@ -34,14 +46,8 @@
 	</Target>
 
 	<ItemGroup>
+		<Folder Include="JS\scss\" />
 		<Folder Include="wwwroot\js\" />
-	</ItemGroup>
-
-
-	<ItemGroup>
-		<Content Update="wwwroot\js\bundle.min.js">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
 	</ItemGroup>
 
 	<PropertyGroup>
