--- a/Energy.App.Standalone/JS/package.json
+++ b/Energy.App.Standalone/JS/package.json
@@ -15,6 +15,7 @@
     "@amcharts/amcharts5": "^5.2.50",
     "@types/node": "^20.4.1",
     "@types/webpack": "^5.28.1",
+    "license-webpack-plugin": "^4.0.2",
     "lodash": "^4.17.21",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
