--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,4 @@ FodyWeavers.xsd
 /.vscode
 /Energy.App.Standalone/JS/package-lock.json
 /Energy.Citations
+/Energy.App.Standalone/.vscode/settings.json
