--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -8,11 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="JS\node_modules\**" />
-	  <Content Remove="JS\node_modules\**" />
-	  <EmbeddedResource Remove="JS\node_modules\**" />
-	  <None Remove="JS\node_modules\**" />
-	  <TypeScriptCompile Remove="JS\node_modules\**" />
+	<None Remove="ClientSide\**" />
+	  <None Remove="ClientSide\node_modules\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -25,10 +22,6 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.9" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.9" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.1.5">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
 		<PackageReference Include="MudBlazor" Version="6.7.0" />
 		<PackageReference Condition="'$(Configuration)'=='Debug'" Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
 	</ItemGroup>
@@ -46,7 +39,7 @@
 	</Target>
 
 	<ItemGroup>
-		<Folder Include="JS\scss\" />
+		<Folder Include="ClientSide\" />
 		<Folder Include="wwwroot\js\" />
 	</ItemGroup>
 
@@ -60,5 +53,8 @@
 		<Exec Condition="'$(Configuration)'=='Debug'" Command="npm run buildDev --prefix JS/" />
 
 	</Target>
+
+
+	<ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
