--- a/Energy.App.Standalone/ClientSide/package.json
+++ b/Energy.App.Standalone/ClientSide/package.json
@@ -12,19 +12,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@amcharts/amcharts5": "^5.2.50",
     "@types/node": "^20.4.1",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
+    "html-webpack-plugin": "^5.5.3",
     "license-webpack-plugin": "^4.0.2",
-    "lodash": "^4.17.21",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@amcharts/amcharts5": "^5.2.50",
+    "lodash": "^4.17.21"
   }
 }
