--- a/Energy.App.Standalone/ClientSide/tsconfig.json
+++ b/Energy.App.Standalone/ClientSide/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES6",
     "sourceMap": true,
     "noImplicitAny": false,
     "removeComments": false,
