--- a/Energy.App.Standalone/ClientSide/tsconfig.json
+++ b/Energy.App.Standalone/ClientSide/tsconfig.json
@@ -8,12 +8,11 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "allowJs": true,
-    "outDir": "../wwwroot/js"
   },
   "files": ["index.ts", "./Files/chartCreation.ts", "./Files/types.ts", "./Files/energyOnlyChart.ts", "./Files/weatherIconChart.ts"],
   
   "exclude": [
     "node_modules",
-    "wwwroot"
+    "../wwwroot"
   ]
 }
