--- a/Energy.App.Standalone/ClientSide/.eslintrc.json
+++ b/Energy.App.Standalone/ClientSide/.eslintrc.json
@@ -2,7 +2,7 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es6": true
     },
     "extends": [
         "eslint:recommended",
@@ -10,11 +10,12 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": 6
     },
     "plugins": [
         "@typescript-eslint"
     ],
     "rules": {
-    }
+    },
+    "ignorePatterns":[ "../wwwroot/*"]
 }
