--- a/Energy.App.Standalone/ClientSide/tsconfig.json
+++ b/Energy.App.Standalone/ClientSide/tsconfig.json
@@ -8,11 +8,13 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "allowJs": true,
+    "outDir": "./"
   },
   "files": ["index.ts", "./Files/chartCreation.ts", "./Files/types.ts", "./Files/energyOnlyChart.ts", "./Files/weatherIconChart.ts"],
   
   "exclude": [
     "node_modules",
     "../wwwroot"
+
   ]
 }
