Attribution generation consolidation

--- a/Energy.App.Standalone/ClientSide/tsconfig.json
+++ b/Energy.App.Standalone/ClientSide/tsconfig.json
@@ -8,6 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "allowJs": true,
+    "checkJs": false,
     "outDir": "./"
   },
   "files": ["index.ts", "./Files/chartCreation.ts", "./Files/types.ts", "./Files/energyOnlyChart.ts", "./Files/weatherIconChart.ts"],
