--- a/Energy.App.Standalone/ClientSide/.eslintrc.json
+++ b/Energy.App.Standalone/ClientSide/.eslintrc.json
@@ -1,21 +1,44 @@
 {
+    "root": true,
+    "extends": [
+        "eslint:recommended"
+    ],
     "env": {
-        "browser": true,
-        "commonjs": true,
+        "node": true,
         "es6": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 6
+        "ecmaVersion": 6,
+        "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-    },
-    "ignorePatterns":[ "../wwwroot/*"]
+
+
+    "overrides": [
+        {
+            "env": {
+                "browser": true,
+                "commonjs": true,
+                "es6": true
+            },
+            "files": [ "**/*.ts, **/*.tsx" ],
+
+            "extends": [
+                "eslint:recommended",
+                "plugin:@typescript-eslint/eslint-recommended",
+                "plugin:@typescript-eslint/recommended"
+            ],
+            "parser": "@typescript-eslint/parser",
+            "parserOptions": {
+                "ecmaVersion": 6,
+                "project": "./tsconfig.json"
+            },
+            "plugins": [
+                "@typescript-eslint"
+            ],
+            "rules": {
+                "ignorePatterns": [ 1 ]
+            }
+        }
+    ]
 }
+ 
