--- a/Energy.App.Standalone/ClientSide/package.json
+++ b/Energy.App.Standalone/ClientSide/package.json
@@ -1,33 +1,48 @@
 {
-  "name": "js",
+  "name": "explain-my-energy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "runLicensee": "licensee --ndjson | tee licenseeOutput.json || true",
     "buildDev": "webpack --config webpack.dev.config.js",
     "buildProd": "webpack --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zola-25/Explain-My-Energy"
+  },
+  "type": "module",
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "zola-25",
+  "private": true,
+  "license": "Apache-2.0",
   "devDependencies": {
-    "@types/node": "^20.4.1",
+    "@types/node": "^20.4.10",
     "@types/webpack": "^5.28.1",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.46.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.47.0",
+    "handlebars": "^4.7.8",
     "html-webpack-plugin": "^5.5.3",
+    "isomorphic-dompurify": "^1.8.0",
     "license-webpack-plugin": "^4.0.2",
+    "marked": "^7.0.3",
+    "minimist": "^1.2.8",
+    "node-html-parser": "^6.1.5",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@amcharts/amcharts5": "^5.2.50",
+    "@amcharts/amcharts5": "^5.4.2",
     "lodash": "^4.17.21"
-  }
+  },
+  "files": [
+    "../../LICENSE"
+  ]
 }
