--- a/Energy.App.Standalone/ClientSide/package.json
+++ b/Energy.App.Standalone/ClientSide/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "runLicensee": "licensee --ndjson | tee licenseeOutput.json || true",
     "buildDev": "webpack --config webpack.dev.config.js",
     "buildProd": "webpack --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,6 +26,7 @@
     "handlebars": "^4.7.8",
     "html-webpack-plugin": "^5.5.3",
     "isomorphic-dompurify": "^1.8.0",
+    "license-checker-rseidelsohn": "^4.2.6",
     "license-webpack-plugin": "^4.0.2",
     "marked": "^7.0.3",
     "minimist": "^1.2.8",
