--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -9,7 +9,8 @@
 
 	<ItemGroup>
 		<None Remove="ClientSide\node_modules\**" />
-		<Content Include="ClientSide\HtmlTemplates\index_template.html" />
+		<None Include="ClientSide\HtmlTemplates\index_template.html" />
+		<None Include="ClientSide\AttributionAndLicensing\**" />
 		<None Include="ClientSide\webpack.dev.config.js" />
 		<None Include="ClientSide\webpack.prod.config.js" />
 		<None Include="wwwroot\css\fontawesome\webfonts\fa-brands-400.woff2" />
@@ -26,12 +27,12 @@
 		<PackageReference Include="Fluxor.Persist" Version="2.5.3" />
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.9" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.9" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.9" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-		<PackageReference Include="MudBlazor" Version="6.7.0" />
-		<PackageReference Condition="'$(Configuration)'=='Debug'" Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" />
+		<PackageReference Include="MudBlazor" Version="6.9.0" />
+		<PackageReference Condition="'$(Configuration)'=='Debug'" Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" PrivateAssets="all" />
 	</ItemGroup>
 
 
