--- a/Energy.App.Standalone/ClientSide/package.json
+++ b/Energy.App.Standalone/ClientSide/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watchSass": "sass --watch ../wwwroot/css/app.scss ../wwwroot/css/app.css",
     "buildDev": "webpack --config webpack.dev.config.js",
     "buildProd": "webpack --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
