--- a/Energy.App.Standalone/ClientSide/package.json
+++ b/Energy.App.Standalone/ClientSide/package.json
@@ -25,6 +25,10 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.47.0",
+    "grunt": "^1.6.1",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-watch": "^1.1.0",
     "handlebars": "^4.7.8",
     "html-webpack-plugin": "^5.5.3",
     "isomorphic-dompurify": "^1.8.0",
