--- a/Energy.App.Standalone/ClientSide/tsconfig.json
+++ b/Energy.App.Standalone/ClientSide/tsconfig.json
@@ -14,7 +14,7 @@
   "files": ["index.ts", "./Files/chartCreation.ts", "./Files/types.ts", "./Files/energyOnlyChart.ts", "./Files/weatherIconChart.ts"],
   
   "exclude": [
-    "node_modules",
+    "**/node_modules/**",
     "../wwwroot"
 
   ]
