--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -7,12 +7,15 @@
 		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<TypeScriptToolsVersion>5.1.6</TypeScriptToolsVersion>
+		<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+		<TypeScriptCompileOnSaveEnabled>False</TypeScriptCompileOnSaveEnabled>
+	</PropertyGroup>
+
 
 	<ItemGroup>
-	  <Compile Remove="ClientSide\node_modules\**" />
-	  <Content Remove="ClientSide\node_modules\**" />
-	  <EmbeddedResource Remove="ClientSide\node_modules\**" />
-	  <None Remove="ClientSide\node_modules\**" />
+	  <None Include="node_modules\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -25,6 +28,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.1.5">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="MudBlazor" Version="6.9.0" />
 		<PackageReference Condition="'$(Configuration)'=='Debug'" Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.0" PrivateAssets="all" />
 	</ItemGroup>
@@ -40,6 +47,7 @@
 		<Copy SourceFiles="%(StaticWebAsset.Identity)" DestinationFolder="wwwroot/temp" Condition="$([System.String]::Copy(%(StaticWebAsset.Identity)).Contains('mudblazor'))" />
 	</Target>
 
+	
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
 		<Exec Command="npm run singleCompileSass" WorkingDirectory="ClientSide" />
 		<Exec Command="echo 'Hello, world!'" />
