--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "https://github.com/zola-25/Explain-My-Energy"
   },
+  "browserslist": [
+    "defaults and supports es6-module"
+  ],
   "type": "module",
   "keywords": [],
   "author": "zola-25",
@@ -24,7 +27,10 @@
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
+    "autoprefixer": "^10.4.15",
+    "css-loader": "^6.8.1",
     "eslint": "^8.47.0",
+    "file-loader": "^6.2.0",
     "grunt": "^1.6.1",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-concat": "^2.1.0",
@@ -36,12 +42,17 @@
     "license-checker-rseidelsohn": "^4.2.6",
     "license-webpack-plugin": "^4.0.2",
     "marked": "^7.0.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "minimist": "^1.2.8",
     "node-html-parser": "^6.1.5",
+    "postcss": "^8.4.28",
+    "postcss-loader": "^7.3.3",
+    "sass-loader": "^13.3.2",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
