--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -7,6 +7,8 @@
     "singleCompileSass": "sass ClientSide/Sass/:wwwroot/css/",
     "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
     "buildDev": "webpack --config ClientSide/webpack.dev.config.js",
+    "buildHtmlBundleDev": "webpack --config src/webpack.htmlb.dev.config.js",
+
     "buildProd": "webpack --config ClientSide/webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -37,6 +39,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-webpack": "^6.0.0",
     "handlebars": "^4.7.8",
+    "html-bundler-webpack-plugin": "^2.8.0",
     "html-webpack-plugin": "^5.5.3",
     "isomorphic-dompurify": "^1.8.0",
     "license-checker-rseidelsohn": "^4.2.6",
