--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -8,7 +8,6 @@
     "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
     "buildDev": "webpack --config ClientSide/webpack.dev.config.js",
     "buildHtmlBundleDev": "webpack --config src/webpack.htmlb.dev.config.js",
-
     "buildProd": "webpack --config ClientSide/webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.15",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.47.0",
     "file-loader": "^6.2.0",
