--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -1,8 +1,8 @@
 {
   "name": "explain-my-energy",
   "version": "1.0.0",
-  "description": "",
-  "main": "ClientSide/index.js",
+  "description": "Understand your energy consumption and carbon emissions, and forecast your future energy costs based on seasonal changes and tariff increases",
+  "main": "src/index.ts",
   "scripts": {
     "singleCompileSass": "sass ClientSide/Sass/:wwwroot/css/",
     "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zola-25/Explain-My-Energy"
+    "url": "https://github.com/zola-25/Explain-My-Energy.git"
   },
   "browserslist": [
     "defaults and supports es6-module"
@@ -22,9 +22,16 @@
   "type": "module",
   "keywords": [],
   "author": "zola-25",
+  "config": {
+    "fullApplicationName": "Explain My Energy",
+    "attribsCssPath": "../scss/app/attribs.scss",
+    "licenseFile": "../LICENSE"
+  },
+  "homepage": "https://github.com/zola-25/Explain-My-Energy/blob/master/README.md",
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/node": "^20.4.10",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
@@ -59,7 +66,8 @@
     "typescript": "^5.1.6",
     "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "yargs": "^17.7.2"
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.4.2",
