--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -7,6 +7,7 @@
     "singleCompileSass": "sass ClientSide/Sass/:wwwroot/css/",
     "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
     "buildPowershell": "pwsh -File src/attributionAndLicensing/BuildAndDistributeThirdPartyAttribution.ps1 -finalOutputPath src/views/AttributionAndLicensing.html -attribsCssPath '..scss/app/attribs.scss'",
+    "buildNugetCredits": "node src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsBuilder.js --parentProjectPath ./Energy.App.Standalone.csproj --generatedHtmlDocumentPath src/views/NugetCreditsPartial.html",
     "buildDev": "webpack --config ClientSide/webpack.dev.config.js",
     "buildHtmlBundleDev": "webpack --config src/webpack.htmlb.dev.config.js",
     "buildProd": "webpack --config ClientSide/webpack.prod.config.js",
@@ -36,6 +37,7 @@
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
+    "async-exit-hook": "^2.0.1",
     "autoprefixer": "^10.4.15",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
