--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -2,14 +2,13 @@
   "name": "explain-my-energy",
   "version": "1.0.0",
   "description": "Understand your energy consumption and carbon emissions, and forecast your future energy costs based on seasonal changes and tariff increases",
-  "main": "src/index.ts",
   "scripts": {
     "singleCompileSass": "sass ClientSide/Sass/:wwwroot/css/",
     "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
     "buildPowershell": "pwsh -File src/attributionAndLicensing/BuildAndDistributeThirdPartyAttribution.ps1 -finalOutputPath src/views/AttributionAndLicensing.html -attribsCssPath '..scss/app/attribs.scss'",
-    "buildNpmCredits": "node src/attributionAndLicensing/NpmLicenseGeneration/NpmCreditsBuilder.js --clientSideRootPath . --generatedHtmlDocumentPath src/views/NpmCreditsPartial.html",
-    
-    "buildNugetCredits": "node src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsBuilder.js --parentProjectPath ./Energy.App.Standalone.csproj --generatedHtmlDocumentPath src/views/NugetCreditsPartial.html",
+    "buildNpmCredits": "node src/attributionAndLicensing/NpmLicenseGeneration/NpmCreditsBuilder.js --packagesJsonFolder . --generatedHtmlDocumentPath src/views/NpmCreditsPartial.html",
+    "buildFinalCreditsDoc": "node src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGeneration.js --projectRootPath . --finalGeneratedCreditsHtmlDocPath src/views/Credits.html",
+    "buildNugetCredits": "node src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsBuilder.js --projectCsprojPath ./Energy.App.Standalone.csproj --generatedHtmlDocumentPath src/views/NugetCreditsPartial.html",
     "buildDev": "webpack --config ClientSide/webpack.dev.config.js",
     "buildHtmlBundleDev": "webpack --config src/webpack.htmlb.dev.config.js",
     "buildProd": "webpack --config ClientSide/webpack.prod.config.js",
