--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -26,8 +26,7 @@
   "author": "zola-25",
   "config": {
     "fullApplicationName": "Explain My Energy",
-    "attribsCssPath": "../scss/app/attribs.scss",
-    "licenseFile": "../LICENSE"
+    "licenseFilePath": "../LICENSE"
   },
   "homepage": "https://github.com/zola-25/Explain-My-Energy/blob/master/README.md",
   "private": true,
