credits generation single file process

--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -6,6 +6,9 @@
     "singleCompileSass": "sass ClientSide/Sass/:wwwroot/css/",
     "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
     "buildPowershell": "pwsh -File src/attributionAndLicensing/BuildAndDistributeThirdPartyAttribution.ps1 -finalOutputPath src/views/AttributionAndLicensing.html -attribsCssPath '..scss/app/attribs.scss'",
+    
+    "buildCreditsDoc": "node scr/attributionAndLicensing/GenerateCreditsDoc.js",
+    
     "buildNpmCredits": "node src/attributionAndLicensing/NpmLicenseGeneration/NpmCreditsBuilder.js --packagesJsonFolder . --generatedHtmlDocumentPath src/views/NpmCreditsPartial.html",
     "buildFinalCreditsDoc": "node src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGeneration.js --projectRootPath . --finalGeneratedCreditsHtmlDocPath src/views/Credits.html",
     "buildNugetCredits": "node src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsBuilder.js --projectCsprojPath ./Energy.App.Standalone.csproj --generatedHtmlDocumentPath src/views/NugetCreditsPartial.html",
