--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -6,16 +6,17 @@
     "singleCompileSass": "sass ClientSide/Sass/:wwwroot/css/",
     "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
     "buildPowershell": "pwsh -File src/attributionAndLicensing/BuildAndDistributeThirdPartyAttribution.ps1 -finalOutputPath src/views/AttributionAndLicensing.html -attribsCssPath '..scss/app/attribs.scss'",
-    
     "buildCreditsDoc": "node src/attributionAndLicensing/GenerateCreditsDoc.js",
-    
     "buildNpmCredits": "node src/attributionAndLicensing/NpmLicenseGeneration/NpmCreditsBuilder.js --packagesJsonFolder . --generatedHtmlDocumentPath src/views/NpmCreditsPartial.html",
     "buildFinalCreditsDoc": "node src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGeneration.js --projectRootPath . --finalGeneratedCreditsHtmlDocPath src/views/Credits.html",
     "buildNugetCredits": "node src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsBuilder.js --projectCsprojPath ./Energy.App.Standalone.csproj --generatedHtmlDocumentPath src/views/NugetCreditsPartial.html",
     "buildDev": "webpack --config ClientSide/webpack.dev.config.js",
     "buildHtmlBundleDev": "webpack --config src/webpack.htmlb.dev.config.js",
+    "buildHtmlBundleProd": "webpack --config src/webpack.htmlb.prod.config.js",
     "buildProd": "webpack --config ClientSide/webpack.prod.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive --grep '.*' src/test",
+    "buildFileDev": "node src/build.js --development",
+    "buildFileProd": "node src/build.js --production"
   },
   "repository": {
     "type": "git",
@@ -61,6 +62,7 @@
     "marked": "^7.0.3",
     "mini-css-extract-plugin": "^2.7.6",
     "minimist": "^1.2.8",
+    "mocha": "^10.2.0",
     "node-html-parser": "^6.1.5",
     "postcss": "^8.4.28",
     "postcss-loader": "^7.3.3",
