--- a/.gitignore
+++ b/.gitignore
@@ -419,4 +419,4 @@ FodyWeavers.xsd
 
 /Energy.App.Standalone/.vscode/*
 /.history
-/Energy.App.Standalone/wwwroot
+/Energy.App.Standalone/wwwroot/**/*
