--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -3,20 +3,10 @@
   "version": "1.0.0",
   "description": "Understand your energy consumption and carbon emissions, and forecast your future energy costs based on seasonal changes and tariff increases",
   "scripts": {
-    "singleCompileSass": "sass ClientSide/Sass/:wwwroot/css/",
-    "watchSass": "sass --watch ClientSide/Sass/:wwwroot/css/",
-    "buildPowershell": "pwsh -File src/attributionAndLicensing/BuildAndDistributeThirdPartyAttribution.ps1 -finalOutputPath src/views/AttributionAndLicensing.html -attribsCssPath '..scss/app/attribs.scss'",
+    "buildDev": "node src/build.js --development",
+    "buildProd": "node src/build.js --production",
     "buildCreditsDoc": "node src/attributionAndLicensing/GenerateCreditsDoc.js",
-    "buildNpmCredits": "node src/attributionAndLicensing/NpmLicenseGeneration/NpmCreditsBuilder.js --packagesJsonFolder . --generatedHtmlDocumentPath src/views/NpmCreditsPartial.html",
-    "buildFinalCreditsDoc": "node src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGeneration.js --projectRootPath . --finalGeneratedCreditsHtmlDocPath src/views/Credits.html",
-    "buildNugetCredits": "node src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsBuilder.js --projectCsprojPath ./Energy.App.Standalone.csproj --generatedHtmlDocumentPath src/views/NugetCreditsPartial.html",
-    "buildDev": "webpack --config ClientSide/webpack.dev.config.js",
-    "buildHtmlBundleDev": "webpack --config src/webpack.htmlb.dev.config.js",
-    "buildHtmlBundleProd": "webpack --config src/webpack.htmlb.prod.config.js",
-    "buildProd": "webpack --config ClientSide/webpack.prod.config.js",
-    "test": "mocha --recursive --grep '.*' src/test",
-    "buildFileDev": "node src/build.js --development",
-    "buildFileProd": "node src/build.js --production"
+    "test": "mocha --recursive --grep '.*' src/test"
   },
   "repository": {
     "type": "git",
@@ -48,22 +38,12 @@
     "ejs": "^3.1.9",
     "eslint": "^8.47.0",
     "file-loader": "^6.2.0",
-    "grunt": "^1.6.1",
-    "grunt-contrib-clean": "^2.0.1",
-    "grunt-contrib-concat": "^2.1.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-webpack": "^6.0.0",
     "handlebars": "^4.7.8",
     "html-bundler-webpack-plugin": "^2.8.0",
-    "html-webpack-plugin": "^5.5.3",
     "isomorphic-dompurify": "^1.8.0",
     "license-checker-rseidelsohn": "^4.2.6",
-    "license-webpack-plugin": "^4.0.2",
     "marked": "^7.0.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "minimist": "^1.2.8",
     "mocha": "^10.2.0",
-    "node-html-parser": "^6.1.5",
     "postcss": "^8.4.28",
     "postcss-loader": "^7.3.3",
     "sass-loader": "^13.3.2",
@@ -71,7 +51,6 @@
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "yargs": "^17.7.2"
