removing unused deps

--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -37,8 +37,8 @@
     "css-loader": "^6.8.1",
     "ejs": "^3.1.9",
     "eslint": "^8.47.0",
-    "file-loader": "^6.2.0",
     "handlebars": "^4.7.8",
+    "he": "^1.2.0",
     "html-bundler-webpack-plugin": "^2.8.0",
     "isomorphic-dompurify": "^1.8.0",
     "license-checker-rseidelsohn": "^4.2.6",
@@ -46,6 +46,7 @@
     "mocha": "^10.2.0",
     "postcss": "^8.4.28",
     "postcss-loader": "^7.3.3",
+    "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
