--- a/Energy.App.Standalone/staticwebapp.config.json
+++ b/Energy.App.Standalone/staticwebapp.config.json
@@ -2,11 +2,11 @@
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": [
-      "/css/**/*",
-      "/js/**/*",
-      "/images/**/*",
-      "/fonts/**/*",
-      "/webfonts/**/*",
+      "/css/*",
+      "/js/*",
+      "/images/*",
+      "/fonts/*",
+      "/webfonts/*",
       "/manifest.json"
     ]
   },
