--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,5 +20,9 @@ updates:
     ignore:
       - dependency-name: "*" 
         update-types: ["version-update:semver-patch"]
-  
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
     
