--- a/.github/workflows/eme-build-and-test-dotnet.yml
+++ b/.github/workflows/eme-build-and-test-dotnet.yml
@@ -38,5 +38,5 @@ jobs:
           dotnet build --no-restore --configuration Release
 
       - name: Test .NET dependencies
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --no-build --verbosity normal --configuration Release
 
