--- a/.github/workflows/eme-build-and-test-dotnet.yml
+++ b/.github/workflows/eme-build-and-test-dotnet.yml
@@ -1,4 +1,4 @@
-name: Azure Static Web .NET Core Build and Test
+name: Staging Build and Test
 
 on:
   push:
@@ -38,5 +38,14 @@ jobs:
           dotnet build --no-restore --configuration Release
 
       - name: Test .NET dependencies
-        run: dotnet test --no-build --verbosity normal --configuration Release
+        run: dotnet test Energy.Test --no-build --configuration Release --logger:"trx;LogFileName=TestResults.trx"
+
+      - name: Test Report
+        uses: dorny/test-reporter@c9b3d0e2bd2a4e96aaf424dbaa31c46b42318226
+        if: success() || failure()
+        with:
+          name: Test Results
+          path: Energy.Test/TestResults/TestResults.trx
+          reporter: dotnet-trx
+  
 
