--- a/.github/workflows/eme-build-and-test-dotnet.yml
+++ b/.github/workflows/eme-build-and-test-dotnet.yml
@@ -20,6 +20,8 @@ jobs:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     name: build-and-test-${{matrix.os}}
     runs-on: ${{ matrix.os }}
+    permissions:
+      checks: write
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
