--- a/.github/workflows/eme-build-and-test-dotnet.yml
+++ b/.github/workflows/eme-build-and-test-dotnet.yml
@@ -22,6 +22,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions:
       checks: write
+      contents: read
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
