--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
+    target-brange: "staging"
     ignore:
       - dependency-name: "*" 
         update-types: ["version-update:semver-patch"]
@@ -17,6 +18,7 @@ updates:
     directory: "/Energy.App.Standalone" # Location of package manifests
     schedule:
       interval: "weekly"
+    target-brange: "staging"
     ignore:
       - dependency-name: "*" 
         update-types: ["version-update:semver-patch"]
@@ -25,4 +27,6 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    target-brange: "staging"
+    
     
