Only do version updates against staging. Security will still be PRs vs main
Only do version updates against staging. Security updates will still be PRs vs main

Signed-off-by: Mike <29863888+zola-25@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
-    target-brange: "staging"
+    target-branch: "staging"
     ignore:
       - dependency-name: "*" 
         update-types: ["version-update:semver-patch"]
@@ -18,7 +18,7 @@ updates:
     directory: "/Energy.App.Standalone" # Location of package manifests
     schedule:
       interval: "weekly"
-    target-brange: "staging"
+    target-branch: "staging"
     ignore:
       - dependency-name: "*" 
         update-types: ["version-update:semver-patch"]
@@ -27,6 +27,6 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    target-brange: "staging"
+    target-branch: "staging"
     
     
