--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -7,7 +7,7 @@
     "buildDev": "node src/build.js --development",
     "buildProd": "node src/build.js --production",
     "buildCreditsDoc": "node src/attributionAndLicensing/GenerateCreditsDoc.js",
-    "test": "mocha -R JSON --reporter-option output=testResults/clientDeploymentTestResults.json --recursive --grep '.*' src/test"
+    "test": "mocha -R mocha-junit-reporter --reporter-option mochaFile=testResults/clientDeploymentTestResults.xml --recursive --grep '.*' src/test"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
+    "@azure/static-web-apps-cli": "^1.1.4",
     "@types/chai": "^4.3.6",
     "@types/dompurify": "^3.0.2",
     "@types/glob": "^8.1.0",
