--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -20,7 +20,7 @@ on:
 
 
 env:
-  environment: staging
+  environment-name: staging
   DOTNET_VERSION: '7.0.400'
   NODE_BUILD_VERSION: '18'
 
@@ -33,7 +33,7 @@ jobs:
             frontendEnv: staging
             DotNetVersion: '7.0.400'
             NodeVersion: '18.x'
-    build:
+    setup-environment:
         name: Staging Deployment - Build
         runs-on: ubuntu-latest
         needs: call-unit-tests
@@ -42,24 +42,35 @@ jobs:
               uses: actions/checkout@v4
               with:
                 ref: ${{ inputs.commit }}
-                
+              
             - name: SetupNode
               uses: actions/setup-node@v3
               with:
                 node-version: ${{ env.NODE_BUILD_VERSION }}
                 cache: 'npm'
                 cache-dependency-path: ./Energy.App.Standalone/package-lock.json
-            
             - name: Setup .NET Core
               uses: actions/setup-dotnet@v3
               with:
                 dotnet-version: ${{ env.DOTNET_VERSION }}
-        
+    build:
+        name: Staging Deployment - Build
+        runs-on: ubuntu-latest
+        needs: setup-environment
+        defaults:
+            run:
+                shell: bash
+                working-directory: ./Energy.App.Standalone
+        steps:
             - name: Install npm dependencies
-              working-directory: ./Energy.App.Standalone
               run: npm ci
         
             - name: Build client-side dependencies
-              working-directory: ./Energy.App.Standalone
-              run: npm run build -- --${{ env.environment }}
+              run: npm run build -- --${{ env.environment-name }}
+
+            - name: Publish
+              run: dotnet publish -c Release -o ./bin/publish
+
+            - name: Deploy
+              run: swa deploy -O ./bin/publish/wwwroot 
           
