--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,4 @@ FodyWeavers.xsd
 /Energy.App.Standalone/.vscode/*
 /.history
 /Energy.App.Standalone/wwwroot/**/*
+Energy.App.Standalone/src/views/Credits.html
