--- a/.github/workflows/eme-pr-tests-and-checks.yml
+++ b/.github/workflows/eme-pr-tests-and-checks.yml
@@ -15,6 +15,9 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         frontendEnv: [development, staging, production]
     uses: ./.github/workflows/eme-reusable-unit-tests-and-checks.yml
+    permissions:
+      checks: write
+      contents: read
     with:
       os: ${{matrix.os}}
       frontendEnv: ${{matrix.frontendEnv}}
